<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding"
    android:paddingTop="@dimen/radius"
    android:paddingRight="@dimen/padding"
    android:paddingBottom="@dimen/radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_gray_border"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/fullname_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/fullname_"
            android:layout_toRightOf="@+id/fullname_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/email_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fullname"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fullname"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/email_"
            android:layout_toRightOf="@+id/email_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />


        <TextView
            android:id="@+id/country_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/countries"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/country_"
            android:layout_toRightOf="@+id/country_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/model_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/model"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/model_"
            android:layout_toRightOf="@+id/model_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/year_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/model"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/year"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/model"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/year_"
            android:layout_toRightOf="@+id/year_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/color_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/year"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/color"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/year"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/color_"
            android:layout_toRightOf="@+id/color_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/gender_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/color"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/color"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/gender_"
            android:layout_toRightOf="@+id/gender_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/title_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/job_title"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/title_"
            android:layout_toRightOf="@+id/title_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/bio_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/biography"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/bio_"
            android:layout_toRightOf="@+id/bio_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

    </RelativeLayout>

</RelativeLayout>