<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding"
    android:paddingTop="@dimen/radius"
    android:paddingRight="@dimen/padding"
    android:paddingBottom="@dimen/radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_gray_border"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/date_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/date_range"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/date_"
            android:layout_toRightOf="@+id/date_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/gender_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/gender_"
            android:layout_toRightOf="@+id/gender_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />


        <TextView
            android:id="@+id/country_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/countries"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/country_"
            android:layout_toRightOf="@+id/country_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/color_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/radius"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/colors"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/radius"
            android:layout_toEndOf="@+id/color_"
            android:layout_toRightOf="@+id/color_"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/small" />

    </RelativeLayout>

</RelativeLayout>