<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".car_records">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/Green"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/padding">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/edittext_height"
                android:layout_height="@dimen/edittext_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/padding"
                android:layout_marginRight="@dimen/padding"
                android:contentDescription="@string/empty"
                android:onClick="back"
                android:src="@drawable/back" />

            <AutoCompleteTextView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_toEndOf="@+id/back"
                android:layout_toRightOf="@+id/back"
                android:background="@drawable/white_normal"
                android:drawableStart="@drawable/search"
                android:drawableLeft="@drawable/search"
                android:hint="@string/search"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="35dp"
                android:paddingRight="35dp"
                android:singleLine="true"
                android:textSize="@dimen/big" />

            <ImageView
                android:id="@+id/clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignTop="@+id/search"
                android:layout_alignEnd="@+id/search"
                android:layout_alignRight="@+id/search"
                android:layout_alignBottom="@+id/search"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/radius"
                android:layout_marginRight="@dimen/radius"
                android:contentDescription="@string/empty"
                android:onClick="clear"
                android:src="@drawable/cancel"
                android:visibility="invisible" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/con"
        android:layout_below="@+id/tb">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="@dimen/padding"
            android:visibility="invisible">


            <TextView
                android:id="@+id/empty_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/sorry_nothing_was_found"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/big" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white"
            android:onClick="refresh"
            android:padding="@dimen/padding"
            android:visibility="invisible">


            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/big" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/load"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="@dimen/padding"
            android:visibility="invisible">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:progressDrawable="@drawable/rotate_dialog" />

        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/con"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/white_top_gray_stroke"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>